parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    CASE
    CHAR
    COMENTARIO
    DEFINE
    DO
    ELSE
    FOR
    LBRACKET
    RBRACKET
    STRING
    SWITCH

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> declaracao_funcao
Rule 6     declaracao -> declaracao_preprocessador
Rule 7     declaracao -> atribuicao
Rule 8     declaracao_variaveis -> tipo lista_variaveis DELIMITADOR
Rule 9     declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco
Rule 10    declaracao_preprocessador -> LIBIMPORT < ID . ID >
Rule 11    tipo -> TIPO
Rule 12    lista_variaveis -> lista_variaveis , ID
Rule 13    lista_variaveis -> ID
Rule 14    parametros -> lista_parametros
Rule 15    parametros -> vazio
Rule 16    lista_parametros -> lista_parametros , tipo ID
Rule 17    lista_parametros -> tipo ID
Rule 18    bloco -> LCHAVE lista_comandos RCHAVE
Rule 19    lista_comandos -> lista_comandos comando
Rule 20    lista_comandos -> comando
Rule 21    comando -> atribuicao
Rule 22    comando -> comando_condicional
Rule 23    comando -> comando_loop
Rule 24    comando -> bloco
Rule 25    atribuicao -> ID ATR expressao DELIMITADOR
Rule 26    comando_condicional -> IF LPAREN expressao RPAREN bloco
Rule 27    comando_loop -> WHILE LPAREN expressao RPAREN bloco
Rule 28    expressao -> expressao OPL expressao
Rule 29    expressao -> expressao OPA expressao
Rule 30    expressao -> LPAREN expressao RPAREN
Rule 31    expressao -> ID
Rule 32    expressao -> NUMERO
Rule 33    vazio -> <empty>

Terminals, with rules where they appear

,                    : 12 16
.                    : 10
<                    : 10
>                    : 10
ATR                  : 25
BOOLEAN              : 
CASE                 : 
CHAR                 : 
COMENTARIO           : 
DEFINE               : 
DELIMITADOR          : 8 25
DO                   : 
ELSE                 : 
FOR                  : 
ID                   : 9 10 10 12 13 16 17 25 31
IF                   : 26
LBRACKET             : 
LCHAVE               : 18
LIBIMPORT            : 10
LPAREN               : 9 26 27 30
NUMERO               : 32
OPA                  : 29
OPL                  : 28
RBRACKET             : 
RCHAVE               : 18
RPAREN               : 9 26 27 30
STRING               : 
SWITCH               : 
TIPO                 : 11
WHILE                : 27
error                : 

Nonterminals, with rules where they appear

atribuicao           : 7 21
bloco                : 9 24 26 27
comando              : 19 20
comando_condicional  : 22
comando_loop         : 23
declaracao           : 2 3
declaracao_funcao    : 5
declaracao_preprocessador : 6
declaracao_variaveis : 4
expressao            : 25 26 27 28 28 29 29 30
lista_comandos       : 18 19
lista_declaracoes    : 1 2
lista_parametros     : 14 16
lista_variaveis      : 8 12
parametros           : 9
programa             : 0
tipo                 : 8 9 16 17
vazio                : 15

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_preprocessador
    (7) declaracao -> . atribuicao
    (8) declaracao_variaveis -> . tipo lista_variaveis DELIMITADOR
    (9) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (10) declaracao_preprocessador -> . LIBIMPORT < ID . ID >
    (25) atribuicao -> . ID ATR expressao DELIMITADOR
    (11) tipo -> . TIPO

    LIBIMPORT       shift and go to state 10
    ID              shift and go to state 9
    TIPO            shift and go to state 11

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_preprocessador      shift and go to state 6
    atribuicao                     shift and go to state 7
    tipo                           shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . declaracao_funcao
    (6) declaracao -> . declaracao_preprocessador
    (7) declaracao -> . atribuicao
    (8) declaracao_variaveis -> . tipo lista_variaveis DELIMITADOR
    (9) declaracao_funcao -> . tipo ID LPAREN parametros RPAREN bloco
    (10) declaracao_preprocessador -> . LIBIMPORT < ID . ID >
    (25) atribuicao -> . ID ATR expressao DELIMITADOR
    (11) tipo -> . TIPO

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    LIBIMPORT       shift and go to state 10
    ID              shift and go to state 9
    TIPO            shift and go to state 11

    declaracao                     shift and go to state 12
    declaracao_variaveis           shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_preprocessador      shift and go to state 6
    atribuicao                     shift and go to state 7
    tipo                           shift and go to state 8

state 3

    (3) lista_declaracoes -> declaracao .

    LIBIMPORT       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    TIPO            reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    LIBIMPORT       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    TIPO            reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> declaracao_funcao .

    LIBIMPORT       reduce using rule 5 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 5 (declaracao -> declaracao_funcao .)
    TIPO            reduce using rule 5 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 5 (declaracao -> declaracao_funcao .)


state 6

    (6) declaracao -> declaracao_preprocessador .

    LIBIMPORT       reduce using rule 6 (declaracao -> declaracao_preprocessador .)
    ID              reduce using rule 6 (declaracao -> declaracao_preprocessador .)
    TIPO            reduce using rule 6 (declaracao -> declaracao_preprocessador .)
    $end            reduce using rule 6 (declaracao -> declaracao_preprocessador .)


state 7

    (7) declaracao -> atribuicao .

    LIBIMPORT       reduce using rule 7 (declaracao -> atribuicao .)
    ID              reduce using rule 7 (declaracao -> atribuicao .)
    TIPO            reduce using rule 7 (declaracao -> atribuicao .)
    $end            reduce using rule 7 (declaracao -> atribuicao .)


state 8

    (8) declaracao_variaveis -> tipo . lista_variaveis DELIMITADOR
    (9) declaracao_funcao -> tipo . ID LPAREN parametros RPAREN bloco
    (12) lista_variaveis -> . lista_variaveis , ID
    (13) lista_variaveis -> . ID

    ID              shift and go to state 14

    lista_variaveis                shift and go to state 13

state 9

    (25) atribuicao -> ID . ATR expressao DELIMITADOR

    ATR             shift and go to state 15


state 10

    (10) declaracao_preprocessador -> LIBIMPORT . < ID . ID >

    <               shift and go to state 16


state 11

    (11) tipo -> TIPO .

    ID              reduce using rule 11 (tipo -> TIPO .)


state 12

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    LIBIMPORT       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    TIPO            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 13

    (8) declaracao_variaveis -> tipo lista_variaveis . DELIMITADOR
    (12) lista_variaveis -> lista_variaveis . , ID

    DELIMITADOR     shift and go to state 17
    ,               shift and go to state 18


state 14

    (9) declaracao_funcao -> tipo ID . LPAREN parametros RPAREN bloco
    (13) lista_variaveis -> ID .

    LPAREN          shift and go to state 19
    DELIMITADOR     reduce using rule 13 (lista_variaveis -> ID .)
    ,               reduce using rule 13 (lista_variaveis -> ID .)


state 15

    (25) atribuicao -> ID ATR . expressao DELIMITADOR
    (28) expressao -> . expressao OPL expressao
    (29) expressao -> . expressao OPA expressao
    (30) expressao -> . LPAREN expressao RPAREN
    (31) expressao -> . ID
    (32) expressao -> . NUMERO

    LPAREN          shift and go to state 22
    ID              shift and go to state 20
    NUMERO          shift and go to state 23

    expressao                      shift and go to state 21

state 16

    (10) declaracao_preprocessador -> LIBIMPORT < . ID . ID >

    ID              shift and go to state 24


state 17

    (8) declaracao_variaveis -> tipo lista_variaveis DELIMITADOR .

    LIBIMPORT       reduce using rule 8 (declaracao_variaveis -> tipo lista_variaveis DELIMITADOR .)
    ID              reduce using rule 8 (declaracao_variaveis -> tipo lista_variaveis DELIMITADOR .)
    TIPO            reduce using rule 8 (declaracao_variaveis -> tipo lista_variaveis DELIMITADOR .)
    $end            reduce using rule 8 (declaracao_variaveis -> tipo lista_variaveis DELIMITADOR .)


state 18

    (12) lista_variaveis -> lista_variaveis , . ID

    ID              shift and go to state 25


state 19

    (9) declaracao_funcao -> tipo ID LPAREN . parametros RPAREN bloco
    (14) parametros -> . lista_parametros
    (15) parametros -> . vazio
    (16) lista_parametros -> . lista_parametros , tipo ID
    (17) lista_parametros -> . tipo ID
    (33) vazio -> .
    (11) tipo -> . TIPO

    RPAREN          reduce using rule 33 (vazio -> .)
    TIPO            shift and go to state 11

    tipo                           shift and go to state 26
    parametros                     shift and go to state 27
    lista_parametros               shift and go to state 28
    vazio                          shift and go to state 29

state 20

    (31) expressao -> ID .

    DELIMITADOR     reduce using rule 31 (expressao -> ID .)
    OPL             reduce using rule 31 (expressao -> ID .)
    OPA             reduce using rule 31 (expressao -> ID .)
    RPAREN          reduce using rule 31 (expressao -> ID .)


state 21

    (25) atribuicao -> ID ATR expressao . DELIMITADOR
    (28) expressao -> expressao . OPL expressao
    (29) expressao -> expressao . OPA expressao

    DELIMITADOR     shift and go to state 30
    OPL             shift and go to state 31
    OPA             shift and go to state 32


state 22

    (30) expressao -> LPAREN . expressao RPAREN
    (28) expressao -> . expressao OPL expressao
    (29) expressao -> . expressao OPA expressao
    (30) expressao -> . LPAREN expressao RPAREN
    (31) expressao -> . ID
    (32) expressao -> . NUMERO

    LPAREN          shift and go to state 22
    ID              shift and go to state 20
    NUMERO          shift and go to state 23

    expressao                      shift and go to state 33

state 23

    (32) expressao -> NUMERO .

    DELIMITADOR     reduce using rule 32 (expressao -> NUMERO .)
    OPL             reduce using rule 32 (expressao -> NUMERO .)
    OPA             reduce using rule 32 (expressao -> NUMERO .)
    RPAREN          reduce using rule 32 (expressao -> NUMERO .)


state 24

    (10) declaracao_preprocessador -> LIBIMPORT < ID . . ID >

    .               shift and go to state 34


state 25

    (12) lista_variaveis -> lista_variaveis , ID .

    DELIMITADOR     reduce using rule 12 (lista_variaveis -> lista_variaveis , ID .)
    ,               reduce using rule 12 (lista_variaveis -> lista_variaveis , ID .)


state 26

    (17) lista_parametros -> tipo . ID

    ID              shift and go to state 35


state 27

    (9) declaracao_funcao -> tipo ID LPAREN parametros . RPAREN bloco

    RPAREN          shift and go to state 36


state 28

    (14) parametros -> lista_parametros .
    (16) lista_parametros -> lista_parametros . , tipo ID

    RPAREN          reduce using rule 14 (parametros -> lista_parametros .)
    ,               shift and go to state 37


state 29

    (15) parametros -> vazio .

    RPAREN          reduce using rule 15 (parametros -> vazio .)


state 30

    (25) atribuicao -> ID ATR expressao DELIMITADOR .

    LIBIMPORT       reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    ID              reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    TIPO            reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    $end            reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    RCHAVE          reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    IF              reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    WHILE           reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)
    LCHAVE          reduce using rule 25 (atribuicao -> ID ATR expressao DELIMITADOR .)


state 31

    (28) expressao -> expressao OPL . expressao
    (28) expressao -> . expressao OPL expressao
    (29) expressao -> . expressao OPA expressao
    (30) expressao -> . LPAREN expressao RPAREN
    (31) expressao -> . ID
    (32) expressao -> . NUMERO

    LPAREN          shift and go to state 22
    ID              shift and go to state 20
    NUMERO          shift and go to state 23

    expressao                      shift and go to state 38

state 32

    (29) expressao -> expressao OPA . expressao
    (28) expressao -> . expressao OPL expressao
    (29) expressao -> . expressao OPA expressao
    (30) expressao -> . LPAREN expressao RPAREN
    (31) expressao -> . ID
    (32) expressao -> . NUMERO

    LPAREN          shift and go to state 22
    ID              shift and go to state 20
    NUMERO          shift and go to state 23

    expressao                      shift and go to state 39

state 33

    (30) expressao -> LPAREN expressao . RPAREN
    (28) expressao -> expressao . OPL expressao
    (29) expressao -> expressao . OPA expressao

    RPAREN          shift and go to state 40
    OPL             shift and go to state 31
    OPA             shift and go to state 32


state 34

    (10) declaracao_preprocessador -> LIBIMPORT < ID . . ID >

    ID              shift and go to state 41


state 35

    (17) lista_parametros -> tipo ID .

    ,               reduce using rule 17 (lista_parametros -> tipo ID .)
    RPAREN          reduce using rule 17 (lista_parametros -> tipo ID .)


state 36

    (9) declaracao_funcao -> tipo ID LPAREN parametros RPAREN . bloco
    (18) bloco -> . LCHAVE lista_comandos RCHAVE

    LCHAVE          shift and go to state 43

    bloco                          shift and go to state 42

state 37

    (16) lista_parametros -> lista_parametros , . tipo ID
    (11) tipo -> . TIPO

    TIPO            shift and go to state 11

    tipo                           shift and go to state 44

state 38

    (28) expressao -> expressao OPL expressao .
    (28) expressao -> expressao . OPL expressao
    (29) expressao -> expressao . OPA expressao

  ! shift/reduce conflict for OPL resolved as shift
  ! shift/reduce conflict for OPA resolved as shift
    DELIMITADOR     reduce using rule 28 (expressao -> expressao OPL expressao .)
    RPAREN          reduce using rule 28 (expressao -> expressao OPL expressao .)
    OPL             shift and go to state 31
    OPA             shift and go to state 32

  ! OPL             [ reduce using rule 28 (expressao -> expressao OPL expressao .) ]
  ! OPA             [ reduce using rule 28 (expressao -> expressao OPL expressao .) ]


state 39

    (29) expressao -> expressao OPA expressao .
    (28) expressao -> expressao . OPL expressao
    (29) expressao -> expressao . OPA expressao

  ! shift/reduce conflict for OPL resolved as shift
  ! shift/reduce conflict for OPA resolved as shift
    DELIMITADOR     reduce using rule 29 (expressao -> expressao OPA expressao .)
    RPAREN          reduce using rule 29 (expressao -> expressao OPA expressao .)
    OPL             shift and go to state 31
    OPA             shift and go to state 32

  ! OPL             [ reduce using rule 29 (expressao -> expressao OPA expressao .) ]
  ! OPA             [ reduce using rule 29 (expressao -> expressao OPA expressao .) ]


state 40

    (30) expressao -> LPAREN expressao RPAREN .

    DELIMITADOR     reduce using rule 30 (expressao -> LPAREN expressao RPAREN .)
    OPL             reduce using rule 30 (expressao -> LPAREN expressao RPAREN .)
    OPA             reduce using rule 30 (expressao -> LPAREN expressao RPAREN .)
    RPAREN          reduce using rule 30 (expressao -> LPAREN expressao RPAREN .)


state 41

    (10) declaracao_preprocessador -> LIBIMPORT < ID . ID . >

    >               shift and go to state 45


state 42

    (9) declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco .

    LIBIMPORT       reduce using rule 9 (declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco .)
    ID              reduce using rule 9 (declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco .)
    TIPO            reduce using rule 9 (declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco .)
    $end            reduce using rule 9 (declaracao_funcao -> tipo ID LPAREN parametros RPAREN bloco .)


state 43

    (18) bloco -> LCHAVE . lista_comandos RCHAVE
    (19) lista_comandos -> . lista_comandos comando
    (20) lista_comandos -> . comando
    (21) comando -> . atribuicao
    (22) comando -> . comando_condicional
    (23) comando -> . comando_loop
    (24) comando -> . bloco
    (25) atribuicao -> . ID ATR expressao DELIMITADOR
    (26) comando_condicional -> . IF LPAREN expressao RPAREN bloco
    (27) comando_loop -> . WHILE LPAREN expressao RPAREN bloco
    (18) bloco -> . LCHAVE lista_comandos RCHAVE
